# igloo

./: .gitignore  LICENSE  main.py  pyproject.toml  ruff.toml
app/: main.py
app/core/: settings.py
app/db/: base.py
app/models/: __init__.py
