[project]
name = "igloo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "granian>=2.7.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.0",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
